--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PizzaRemySofia</title>
+    <title>@ViewData["Title"] - Пица-Ресторант Реми</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PizzaRemySofia</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Пица-Ресторант Реми</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Начало</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">Меню</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Gallery">Галерия</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакти</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - PizzaRemySofia</p>
+            <p>&copy; @DateTime.Now.Year - Пица-Ресторант Реми | Sofia</p>
         </footer>
     </div>
 
