--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Начало</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">Меню</a></li>
+                    <li><a asp-area="" asp-controller="Menu" asp-action="Index">Меню</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Gallery">Галерия</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакти</a></li>
                 </ul>
