--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -9,9 +9,9 @@
 {
     <div>
         <h4 class="menu-category">
-            @cat.Key.NameBg / 
+            @cat.Key.NameBg.ToUpper() / 
             <span class="menu-en"> 
-                @cat.Key.NameEn
+                @cat.Key.NameEn.ToUpper()
             </span>
         </h4>
 
@@ -20,10 +20,12 @@
             <div class="menu-item">
                 <div class="row">
                     <div class="col-sm-10">
-                        @menuItem.NameBg / 
-                        <span class="menu-en"> 
-                            @menuItem.NameEn
-                        </span>
+                        <strong>
+                            @menuItem.NameBg / 
+                            <span class="menu-en"> 
+                                @menuItem.NameEn
+                            </span>
+                        </strong>
                     </div>
                     <div class="col-sm-1">
                         @menuItem.Weight гр.
@@ -33,10 +35,16 @@
                     </div>
                 </div> 
                 <div>
-                    @menuItem.DescriptionBg
+                    @if (!string.IsNullOrEmpty(menuItem.DescriptionBg))
+                    {
+                        <span>/</span>@menuItem.DescriptionBg<span>/</span>
+                    }
                 </div>
                 <div class="menu-en">
-                    @menuItem.DescriptionEn
+                    @if (!string.IsNullOrEmpty(menuItem.DescriptionEn))
+                    {
+                        <span>/</span>@menuItem.DescriptionEn<span>/</span>
+                    }
                 </div>
             </div>
         }
