--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Начало</a></li>
                     <li><a asp-area="" asp-controller="Menu" asp-action="Index">Меню</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Gallery">Галерия</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакти</a></li>
+                    <li><a asp-area="" asp-controller="Contacts" asp-action="Index">Контакти</a></li>
                     <li>
                         <a href="https://www.facebook.com/PizzaRemySofia/" target="_blank">
                             <img src="~/images/fb.png" alt="facebook" width="20" height="20" />
