--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -80,6 +80,11 @@ hr{
     margin: 15px;
 }
 
+#map {
+    width: 100%;
+    min-height: 400px;
+}
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
