--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -5,6 +5,9 @@
     ViewData["Title"] = "Меню";
 }
 
+<h2>@ViewData["Title"]</h2>
+<h3>@ViewData["Message"]</h3>
+
 @foreach (var cat in Model.Items)
 {
     <div>
