--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Начало</a></li>
                     <li><a asp-area="" asp-controller="Menu" asp-action="Index">Меню</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Gallery">Галерия</a></li>
+                    <li><a asp-area="" asp-controller="Gallery" asp-action="Index">Галерия</a></li>
                     <li><a asp-area="" asp-controller="Contacts" asp-action="Index">Контакти</a></li>
                     <li>
                         <a href="https://www.facebook.com/PizzaRemySofia/" target="_blank">
